--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ replay_pid*
 /LabVectoresMatrices3G/build/
 /LabVectoresMatrices/nbproject/private/
 /LabVectoresMatrices/build/
+/Labvectores/nbproject/private/
+/LabVectores/nbproject/private/
+/LabVectores/build/
