creación del prototipo del examen

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ replay_pid*
 /Labvectores/nbproject/private/
 /LabVectores/nbproject/private/
 /LabVectores/build/
+/PrototipoP31P2024/nbproject/private/
